tests/fixtures/invalid/list_pow_bool.py
# Cannot power List[int] and Bool
x: list[int] = [1, 2, 3] ** True
